--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
     </noscript>
     <div id="root"></div>
 
-
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -29,5 +28,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src='../src/index.js'></script>
   </body>
 </html>
